# fastapi_docs_tutor

./: .gitignore  Makefile  README.md  pyproject.toml
src/: main.py
tests/: test_main.py
